fix dark mode
Still needs some more work

--- a/src/styles.css
+++ b/src/styles.css
@@ -438,7 +438,7 @@ ol[role='list'] {
   --color-grey-950: #1a1914;
 
   /* https://tints.dev/grey/FFD46D */
-  --color-primary-50: #fff9f0;
+  --color-primary-50: color-mix(in srgb, #fff9f0, white 80%);
   --color-primary-100: #fff4e0;
   --color-primary-200: #ffebc7;
   --color-primary-300: #ffe2a8;
@@ -471,6 +471,19 @@ ol[role='list'] {
   :root {
     color-scheme: dark;
 
+    
+    --color-primary-950: #fff9f0;
+    --color-primary-900: #fff4e0;
+    --color-primary-800: #ffebc7;
+    --color-primary-700: #ffe2a8;
+    --color-primary-600: #ffda8a;
+    --color-primary-500: #ffd46d;
+    --color-primary-400: #ffba24;
+    --color-primary-300: #db9200;
+    --color-primary-200: #946000;
+    --color-primary-100: #472d00;
+    --color-primary-50: color-mix(in srgb, #241600, black 80%);
+
     --color-light: #101010;
     --color-light-shade: #000000;
     --color-light-glare: #212121;
@@ -487,7 +500,7 @@ ol[role='list'] {
 }
 
 body {
-  background-color: color-mix(in srgb, var(--color-primary-50), white 80%);
+  background-color: var(--color-primary-50);
   color: var(--color-primary-950);
   /* background-color: var(--color-light); */
   /* color: var(--color-dark); */
@@ -585,6 +598,11 @@ header button {
 
 [aria-expanded="false"]+* {
   display: none;
+}
+
+figcaption {
+  text-align: center;
+  padding-block-start: var(--space-xs);
 }
 
 
@@ -906,6 +924,12 @@ mark {
     border-block-end: none;
     border-block-start: 4px solid color-mix(in srgb, var(--color-primary-50), white 80%);
     /* transform: translateY(4px); */
+  }
+}
+
+@media(prefers-color-scheme: dark) {
+  .button {
+    color: var(--color-primary-50);
   }
 }
 
